--- a/src/main/webapp/i18n/en/points.json
+++ b/src/main/webapp/i18n/en/points.json
@@ -4,7 +4,7 @@
             "home": {
                 "title": "Points",
                 "createLabel": "Create a new Points",
-                "createOrEditLabel": "Create or edit a Points",
+                "createOrEditLabel": "Add Points",
                 "search": "Search for Points"
             },
             "created": "A new Points is created with identifier {{ param }}",
