--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -14,6 +14,11 @@
             "follow": "follow @java_hipster on Twitter"
         },
         "like": "If you like JHipster, don't forget to give us a star on",
-        "github": "GitHub"
+        "github": "GitHub",
+        "points": {
+            "thisWeek": "Points for the week of {{date}}:",
+            "thisWeekMobile": "Points for {{date}}:",
+            "getMoving": "No points yet this week, better get moving!"
+        }
     }
 }
